        calculation of the aov object can significantly reduce estimation 
        time of ANOVAs for models with large N and within-subjects factors. Even 
        for small models, a speed increase by more than 10% is expected.
        For ANOVAs without aov object, emmeans are always based on the 
        multivariate or lm model. 



                    *************************
                    ** afex VERSION 0.23-x **
                    *************************
                    
                    Changes in afex Version 0.23-x
                    Released February 2019
                    
    Significant User Visible Changes and New Features
    
    o   Added afex_plot.default() method which works with a wide variety of 
        fitted objects. See new vignette:
        vignette("afex_plot_supported_models", package = "afex")
        
    o   In afex_plot(), renamed 'random' argument to 'id' argument.
    
    Bugfixes

    o   Corrected bug in afex_plot() vignette and examples. Correct argument
        name is factor_levels.

    o   Removed reference to ascii package from documentation, as the package 
        was removed from CRAN.


                    *************************
                    ** afex VERSION 0.22-x **
                    *************************
                    
                    Changes in afex Version 0.22-x
                    Released September 2018
                    
    Significant User Visible Changes and New Features
    
    o   New functions for plotting results (means, error bars, and raw data) 
        using ggplot2, afex_plot(), generic function for afex and lme4::merMod 
        objects. Furthermore added two more functions:
        - interaction_plot(): workhorse producing interaction plot
        - oneway_plot(): workhorse producing oneway plot
        Error bars can display confidence intervals (the default) or standard
        errors and can be calculated using a variety of different standard 