@@ -15,6 +15,12 @@
         For ANOVAs without aov object, emmeans are always based on the 
         multivariate or lm model. 
 
+    Bugfixes
+
+    o   Sum-to-zero contrasts will now be set to all non-numeric variables 
+        passed to mixed(). Before, only factor variables were changed. This
+        specifically ensures that character variables (such as obtained from 
+        tidyverse data load functions) are handled like factors in mixed models.
 
 
                     *************************
